# egui-i18n

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
assets/languages/classic/: en_US.egl  ja_JP.egl  zh_CN.egl
assets/languages/fluent/: en-US.ftl  ja-JP.ftl  zh-Hans.ftl
cli/: Cargo.toml
cli/src/: main.rs  types.rs
cli/src/command/: generate.rs  mod.rs
examples/classic/: Cargo.toml
examples/classic/src/: main.rs
examples/fluent/: Cargo.toml
examples/fluent/src/: main.rs
i18n/: Cargo.toml  README.md
i18n/src/: lib.rs
i18n/tests/: classic.rs  fluent.rs
scripts/: egui-example.sh  egui-i18n.sh
