[package]
name = "egui-i18n-cli"
version.workspace = true
authors = ["fewensa <osuni@protonmail.com>"]
description = "egui i18n"
edition.workspace = true
homepage = "https://github.com/fewensa/egui-i18n"
license.workspace = true
readme = "README.md"
repository = "https://github.com/fewensa/egui-i18n"
categories = ["gui"]
keywords = ["gui", "immediate", "portable"]
include = ["../LICENSE", "**/*.rs", "Cargo.toml"]

[dependencies]
color-eyre = "0.6"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1"

egui-i18n = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

