[package]
name = "egui-i18n-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include.workspace = true
categories = ["gui"]
keywords = ["gui", "immediate", "portable"]
publish = false

[dependencies]
color-eyre = { workspace = true }
structopt = { workspace = true, features = ["paw"] }
paw = { workspace = true }

egui-i18n = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
