[package]
name = "egui-i18n"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
categories = ["gui"]
keywords = ["gui", "immediate", "portable"]

readme = "README.md"
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
default = ["classic"]
classic = []
fluent = ["dep:fluent", "unic-langid", "intl-memoizer", "dep:fluent-bundle"]

[dependencies]
once_cell = { workspace = true }
log = { workspace = true }

fluent = { workspace = true, optional = true }
fluent-bundle = { workspace = true, optional = true }

unic-langid = { workspace = true, optional = true }
intl-memoizer = { workspace = true, optional = true }
