[package]
name = "egui-i18n-example-classic"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true
publish = false

[dependencies]
eframe = "0.31.0"

egui-i18n = { workspace = true }

# For image support:
egui_extras = { version = "0.31.0", features = ["default", "image"] }
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
